Rewrite backend from Rust to Python (FastAPI)
  - Replace Rust/Axum server with Python/FastAPI for simpler development
  - Rename directories: server/ → backend/, web/ → frontend/
  - Implement MQTT client for Bambu printer connectivity (paho-mqtt)
  - Add REST API endpoints for spools and printers
  - Add WebSocket support for real-time UI updates
  - Add AMS visualization assets (images, SVGs)
  - Add AmsCard component for printer AMS display
  - Update CLAUDE.md with new Python development instructions
  - Update .gitignore for Python artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,17 @@
-# Rust
-/target/
-server/target/
-**/*.rs.bk
-Cargo.lock
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+venv/
+ENV/
+*.egg-info/
+.eggs/
 
 # Node
 node_modules/
-web/dist/
+frontend/dist/
 .npm
 *.log
 
@@ -25,6 +30,8 @@ web/dist/
 
 # OS
 .DS_Store
+._.DS_Store
+._*
 Thumbs.db
 
 # Environment
@@ -32,6 +39,10 @@ Thumbs.db
 .env.local
 .env.*.local
 
-# Device
-device/service/__pycache__/
-device/service/*.pyc
+# Build artifacts
+*.pyc
+.vite/
+
+# Screenshots (reference only, don't commit large assets)
+screenshots/OrcaSlicer/
+screenshots/ha-bambulab-cards/
