Add GUI simulator and modernize UI design
  - Create PNG screenshot generator for previewing GUI without hardware
  - Add light/dark theme support with modern slate-gray color palette
  - Integrate OrcaSlicer filament icon via SVG→BMP converter
  - Fix cargo config to scope -nostartfiles to ESP32 target only
  - Implement all 6 screens: home, spool info, AMS select, settings,
    calibration, WiFi setup

  Simulator: firmware/simulator/
  Run with: cargo run --target x86_64-unknown-linux-gnu

--- a/firmware/.cargo/config.toml
+++ b/firmware/.cargo/config.toml
@@ -1,10 +1,11 @@
 [target.xtensa-esp32s3-none-elf]
 runner = "espflash flash --monitor"
-
-[build]
+# ESP32 needs -nostartfiles - moved here from [build] to not affect other targets
 rustflags = [
     "-C", "link-arg=-nostartfiles",
 ]
+
+[build]
 target = "xtensa-esp32s3-none-elf"
 
 [unstable]
