--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,8 @@ pydantic-settings>=2.1.0
 python-multipart>=0.0.6
 cbor2>=5.5.0
 httpx==0.28.1
+zeroconf>=0.131.0
+Pillow>=10.0.0
 
 # Testing
 pytest>=8.0.0
