--- a/firmware/Cargo.toml
+++ b/firmware/Cargo.toml
@@ -27,12 +27,17 @@ embedded-graphics-core = "0.4.0"
 
 # Hardware IO
 embedded-hal = "1.0.0"
+embedded-svc = "0.28"
 
 # Error handling
 anyhow = "1.0"
 
 # C String interop
 cstr_core = "0.2.1"
+
+# JSON parsing for backend communication
+serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
+serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
 
 [build-dependencies]
 embuild = "0.33"
@@ -57,3 +62,4 @@ opt-level = "z"
 esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys.git" }
 esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal.git" }
 esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc.git" }
+embedded-svc = { git = "https://github.com/esp-rs/embedded-svc.git" }
