--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,3 +14,7 @@ Pillow>=10.0.0
 pytest>=8.0.0
 pytest-asyncio>=0.23.0
 pytest-cov>=4.1.0
+
+# Linting & Formatting
+ruff>=0.14.0
+pre-commit>=3.5.0
