--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -8,3 +8,4 @@ python_functions = test_*
 addopts = -v --tb=short
 filterwarnings =
     ignore::DeprecationWarning
+    ignore:coroutine.*was never awaited:RuntimeWarning
