--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,5 +1,7 @@
+name: spoolbuddy
+
 services:
-  backend-tests:
+  backend-test:
     build:
       context: .
       dockerfile: Dockerfile.test
@@ -11,7 +13,7 @@ services:
       SPOOLBUDDY_DATABASE_PATH: ":memory:"
     command: ["pytest", "tests/", "-v", "--tb=short", "-p", "no:cacheprovider"]
 
-  frontend-tests:
+  frontend-test:
     build:
       context: .
       dockerfile: Dockerfile.test
@@ -20,3 +22,15 @@ services:
       - ./frontend:/app/frontend
       - /app/frontend/node_modules
     command: ["npm", "test", "--", "--run"]
+
+  integration:
+    build: .
+    network_mode: host
+    environment:
+      SPOOLBUDDY_DATABASE_PATH: ":memory:"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3000/api/spools"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
