--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,13 +90,13 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r backend/requirements.txt
-          pip install pytest pytest-asyncio pytest-cov pytest-timeout
+          pip install pytest pytest-asyncio pytest-cov pytest-timeout pytest-xdist
 
       - name: Run tests
         timeout-minutes: 10
         run: |
           cd backend
-          python -m pytest tests/ -v --tb=short --timeout=60 --timeout-method=thread
+          python -m pytest tests/ -v --tb=short --timeout=60 --timeout-method=thread -n auto
 
   # ============================================================================
   # Frontend Checks
