--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -20,7 +20,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: [python, javascript-typescript, actions]
+        language: [python, javascript-typescript, actions, rust]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
