--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -25,7 +25,7 @@ ENV SPOOLBUDDY_DATABASE_PATH=:memory:
 ENV TESTING=1
 
 # Default command runs pytest
-CMD ["pytest", "tests/", "-v", "--tb=short", "-p", "no:cacheprovider"]
+CMD ["pytest", "tests/", "-v", "--tb=short", "-p", "no:cacheprovider", "-n", "auto"]
 
 # -------------------------------------------
 # Frontend test stage
