--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,21 +1,115 @@
-fastapi>=0.104.0
-uvicorn[standard]>=0.24.0
-paho-mqtt>=2.0.0
-aiosqlite>=0.19.0
-pydantic>=2.5.0
-pydantic-settings>=2.1.0
-python-multipart>=0.0.22  # CVE-2026-24486
-cbor2>=5.8.0  # CVE-2025-68131
+aiosqlite==0.22.0
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.12.0
+attrs==25.4.0
+babel==2.17.0
+backrefs==6.1
+bandit==1.9.3
+bitarray==3.8.0
+bitstring==4.3.1
+boolean.py==5.0
+CacheControl==0.14.4
+cairocffi==1.7.1
+CairoSVG==2.8.2
+cbor2==5.8.0
+certifi==2025.11.12
+cffi==2.0.0
+cfgv==3.5.0
+charset-normalizer==3.4.4
+click==8.3.1
+colorama==0.4.6
+coverage==7.13.0
+cryptography==46.0.5
+csscompressor==0.9.5
+cssselect2==0.8.0
+cyclonedx-python-lib==11.6.0
+defusedxml==0.7.1
+distlib==0.4.0
+fastapi==0.124.4
+filelock==3.20.3
+ghp-import==2.1.0
+h11==0.16.0
+htmlmin2==0.1.13
+httpcore==1.0.9
+httptools==0.7.1
 httpx==0.28.1
-zeroconf>=0.131.0
-Pillow>=10.0.0
-psutil>=5.9.0
-
-# Testing
-pytest>=8.0.0
-pytest-asyncio>=0.23.0
-pytest-cov>=4.1.0
-
-# Linting & Formatting
-ruff>=0.14.0
-pre-commit>=3.5.0
+identify==2.6.16
+idna==3.11
+ifaddr==0.2.0
+iniconfig==2.3.0
+intelhex==2.3.0
+Jinja2==3.1.6
+jschema-to-python==1.2.3
+jsmin==3.0.1
+jsonpickle==4.1.1
+license-expression==30.4.4
+Markdown==3.10.1
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+mdurl==0.1.2
+mergedeep==1.3.4
+mkdocs==1.6.1
+mkdocs-get-deps==0.2.0
+mkdocs-material==9.7.1
+mkdocs-material-extensions==1.3.1
+mkdocs-minify-plugin==0.8.0
+msgpack==1.1.2
+nodeenv==1.10.0
+packageurl-python==0.17.6
+packaging==25.0
+paginate==0.5.7
+paho-mqtt==2.1.0
+pathspec==1.0.3
+pbr==7.0.3
+pillow==12.0.0
+pip-api==0.0.34
+pip-requirements-parser==32.0.1
+pip_audit==2.10.0
+platformdirs==4.5.1
+pluggy==1.6.0
+pre_commit==4.5.1
+psutil==7.2.1
+py-serializable==2.1.0
+pycparser==2.23
+pydantic==2.12.5
+pydantic-settings==2.12.0
+pydantic_core==2.41.5
+Pygments==2.19.2
+pymdown-extensions==10.20.1
+pyparsing==3.3.2
+pyserial==3.5
+pytest==9.0.2
+pytest-asyncio==1.3.0
+pytest-cov==7.0.0
+pytest-xdist==3.8.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
+python-multipart==0.0.22
+PyYAML==6.0.3
+pyyaml_env_tag==1.1
+reedsolo==1.7.0
+requests==2.32.5
+rich==14.2.0
+rich-click==1.9.4
+ruff==0.14.13
+sarif-om==1.0.4
+setuptools==82.0.0
+six==1.17.0
+sortedcontainers==2.4.0
+starlette==0.50.0
+stevedore==5.6.0
+tinycss2==1.5.1
+tomli==2.4.0
+tomli_w==1.2.0
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+urllib3==2.6.3
+uvicorn==0.38.0
+uvloop==0.22.1
+virtualenv==20.36.1
+watchdog==6.0.0
+watchfiles==1.1.1
+webencodings==0.5.1
+websockets==15.0.1
+zeroconf==0.148.0
